--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/pillbox?useUnicode=true&characterEncoding=UTF-8
-database.user=root
-database.password=123456
+database.url=jdbc:mysql://119.254.211.32:3306/pillbox?useUnicode=true&characterEncoding=UTF-8
+database.user=smartbox
+database.password=cytx123
 
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
