--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://119.254.211.32:3306/pillbox?useUnicode=true&characterEncoding=UTF-8
+database.url=jdbc:mysql://qy-box01:3306/pillbox?useUnicode=true&characterEncoding=UTF-8
 database.user=smartbox
 database.password=cytx123
 
