--- a/src/main/resources/conf_dev/wx.properties
+++ b/src/main/resources/conf_dev/wx.properties
@@ -1,5 +1,5 @@
 # 微信配置
-wx.server.host=
-wx.app.id=
-wx.app.secret=
+wx.server.host=http://test.boxmed.cn:9777
+wx.app.id=wxbf1b2709782fc701
+wx.app.secret=cbff44383fd6215c1460f81534f3988a
 
