--- a/pom.xml
+++ b/pom.xml
@@ -193,5 +193,19 @@
             </resource>
         </resources>
 
+
     </build>
+
+    <repositories>
+        <repository>
+            <id> central</id>
+            <name> Maven Repository Switchboard</name>
+            <layout> default</layout>
+            <url> http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 </project>
